--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Название приложения -->
-    <string name="app_name">MiniNote</string>
+    <string name="app_name">Мини Заметки</string>
 
     <!-- Подсказка в EditText -->
     <string name="hint_note_input">Введите заметку</string>
